<resources>
    <string name="app_name">Officer\'s Club</string>

    <!-- Base class strings -->
    <string name="some_error">Something went wrong!</string>
    <string name="not_connected_to_internet">Please check your network connection and try again.</string>

    <!-- Login -->
    <string name="login">LOGIN</string>
    <string name="hint_enter_mobile">Enter Mobile</string>
    <string name="welcome">Welcome</string>
    <string name="empty_error">Please enter valid mobile number</string>
    <!-- OTP -->
    <string name="enter_otp">Enter your \nVerification code</string>
    <string name="enter_otp_info">We sent a verification code to 9822620192</string>
    <string name="verify">VERIFY</string>

    <!-- profile -->
    <string name="complete">Complete your profile</string>
    <string name="add_details">Add a profile photo, name and bio to let people know who you are</string>
    <string name="name">Enter Name</string>
    <string name="birthdate">Enter Birthdate</string>
    <string name="address">Enter Address</string>
    <string name="email">Enter Email</string>
    <string name="submit">SUBMIT</string>
    <string name="gender">Gender</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>