<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_14sdp"
        android:background="@color/white"
        tools:context=".ui_section.login_section.ActivityLogin">


        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/login_img" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_below="@id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:lineSpacingMultiplier="1.20"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:textSize="@dimen/_14ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp">

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/hint_enter_mobile"
                    android:importantForAutofill="no"
                    android:inputType="number|phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="@dimen/_10sdp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>