<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_14sdp"
        android:background="@color/white"
        tools:context=".ui_section.otp_section.ActivityOtp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_300sdp"
            android:layout_height="@dimen/_300sdp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/old_img" />

        <TextView
            android:id="@+id/tv_otp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_logo"
            android:gravity="center"
            android:text="@string/enter_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/tv_otp_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_otp_title"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/enter_otp_info"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="4.0">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <EditText
                        android:id="@+id/et_first"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/rounded_square_edt"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLength="1"
                        android:singleLine="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <EditText
                        android:id="@+id/et_second"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/rounded_square_edt"
                        android:gravity="center"
                        android:maxLength="1"
                        android:inputType="number"
                        android:singleLine="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <EditText
                        android:id="@+id/et_third"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/rounded_square_edt"
                        android:gravity="center"
                        android:maxLength="1"
                        android:inputType="number"
                        android:singleLine="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0">

                    <EditText
                        android:id="@+id/et_fourth"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/rounded_square_edt"
                        android:gravity="center"
                        android:maxLength="1"
                        android:inputType="number"
                        android:singleLine="true" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_logo"
                android:gravity="center"
                android:padding="@dimen/_6sdp"
                android:text="Didn't receive the OTP? Resend"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verify"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/verify"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>
</layout>